# termbenchbot

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  alacritty_master.sh  bench.sh  lasthash  lastversion  plot_master.sh
clients/: bench.sh  wol.sh
config/: alacritty.toml  alacritty.yml  install.sh
migrations/2021-09-10-013057_create_jobs/: down.sql  up.sql
src/: github.rs  main.rs  model.rs  schema.rs  webserver.rs
systemd/: alacritty_master.service  alacritty_master.timer  install.sh  plot_master.service  plot_master.timer
