[package]
name = "perfbot"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.10.1", features = ["rt-multi-thread", "macros"] }
hyper = { version = "0.14.12", features = ["client", "tcp", "http2"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
