[package]
name = "perfbot"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
diesel = { version = "1.4.7", features = ["sqlite", "chrono"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
ureq = { version = "2.2.0", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
dotenv = "0.15.0"
